namespace Job.Worker.Resources.Models;

/// <summary>
/// Record for CPU stats
/// </summary>
public record CpuStat(long Total, long Idle);
